購物車表單驗證調整、登入轉向

--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -142,7 +142,7 @@ input:focus {
   height: 800px;
   border: 6px solid black;
   background-color: #002c80;
-  background-image: radial-gradient(#01173fc2 18%, transparent 22%), radial-gradient(#01173fc2 18%, transparent 22%);
+  background-image: radial-gradient(#01173fc2 15%, transparent 15%), radial-gradient(#01173fc2 15%, transparent 15%);
   background-position: 20px 0, 56px 46px;
   background-size: 83px 80px;
   background-attachment: fixed;
@@ -162,9 +162,6 @@ input:focus {
 }
 
 /* 本週主打精選 */
-
-
-
 .quotation img {
   width: 100%;
   object-fit: contain;
@@ -269,7 +266,7 @@ input:focus {
   border: 6px solid black;
   border: 6px solid black;
   background-color: #002c80;
-  background-image: radial-gradient(#01173fc2 18%, transparent 22%), radial-gradient(#01173fc2 18%, transparent 22%);
+  background-image: radial-gradient(#01173fc2 15%, transparent 15%), radial-gradient(#01173fc2 15%, transparent 15%);
   background-position: 20px 0, 56px 46px;
   background-size: 83px 80px;
   background-attachment: fixed;
@@ -459,7 +456,7 @@ iframe {
   /* background: url(../imgs/member/section-4.svg); */
   border: 6px solid black;
   background-color: #002c80;
-  background-image: radial-gradient(#01173fc2 18%, transparent 22%), radial-gradient(#01173fc2 18%, transparent 22%);
+  background-image: radial-gradient(#01173fc2 15%, transparent 15%), radial-gradient(#01173fc2 15%, transparent 15%);
   background-position: 20px 0, 56px 46px;
   background-size: 83px 80px;
   background-attachment: fixed;
@@ -509,209 +506,9 @@ footer .letter-submit {
   font-size: 1rem;
 }
 
+/*  */
 .flip-book {
   height: 500px;
-}
-
-.containerA {
-  margin: 4% auto;
-  width: 210px;
-  height: 140px;
-  position: relative;
-  perspective: 1000px;
-  transition: 1s;
-  transform: translateX(1500px);
-}
-
-.right-in {
-  transform: translateX(0px);
-  transform: scale(1.2);
-}
-
-#carousel {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  animation: rotation 20s infinite linear;
-}
-
-#carousel:hover {
-  animation-play-state: paused;
-}
-
-#carousel figure {
-  display: block;
-  position: absolute;
-  width: 206px;
-  height: 166px;
-  left: 10px;
-  top: 100%;
-  background: white;
-  overflow: hidden;
-  border: solid 5px black;
-}
-
-figure img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#carousel figure:nth-child(9) {
-  transform: rotateY(0deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(8) {
-  transform: rotateY(40deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(7) {
-  transform: rotateY(80deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(6) {
-  transform: rotateY(120deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(5) {
-  transform: rotateY(160deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(4) {
-  transform: rotateY(200deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(3) {
-  transform: rotateY(240deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(2) {
-  transform: rotateY(280deg) translateZ(320px);
-}
-
-#carousel figure:nth-child(1) {
-  transform: rotateY(320deg) translateZ(320px);
-}
-
-img {
-  /* -webkit-filter: grayscale(1); */
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-#carousel img:hover {
-  /* -webkit-filter: grayscale(0); */
-  transform: scale(1.2, 1.2);
-}
-
-@keyframes rotation {
-  from {
-    transform: rotateY(360deg);
-  }
-
-  to {
-    transform: rotateY(0deg);
-  }
-}
-
-/* another test */
-
-
-.test a {
-  -webkit-transition: all 150ms ease;
-  -moz-transition: all 150ms ease;
-  -ms-transition: all 150ms ease;
-  -o-transition: all 150ms ease;
-  transition: all 150ms ease;
-}
-
-.test a:hover {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  /* IE 8 */
-  filter: alpha(opacity=50);
-  /* IE7 */
-  opacity: 0.6;
-  text-decoration: none;
-}
-
-/* Container */
-.test.container-fluid {
-  background: #FFFFFF;
-  margin: 40px auto 10px;
-  padding: 20px 40px 0;
-  max-width: 960px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-}
-
-
-/* Page Header */
-.page-header {
-  background: #f9f9f9;
-  margin: -30px -40px 40px;
-  padding: 20px 40px;
-  border-top: 4px solid #ccc;
-  color: #999;
-  text-transform: uppercase;
-}
-
-.page-header h3 {
-  line-height: 0.88rem;
-  color: #000;
-}
-
-/* Thumbnail Box */
-.caption h4 {
-  font-size: 1rem;
-  color: #444;
-}
-
-.caption p {
-  font-size: 0.75rem;
-  color: #999;
-}
-
-.btn.btn-mini {
-  font-size: 0.63rem;
-}
-
-
-/* Carousel Control */
-.control-box {
-  text-align: right;
-  width: 100%;
-}
-
-.carousel-control {
-  background: #666;
-  border: 0px;
-  border-radius: 0px;
-  display: inline-block;
-  font-size: 34px;
-  font-weight: 200;
-  line-height: 18px;
-  opacity: 0.5;
-  padding: 4px 10px 0px;
-  position: static;
-  height: 30px;
-  width: 15px;
-}
-
-
-
-/* Mobile Only */
-@media (max-width: 767px) {
-
-  .page-header,
-  .control-box {
-    text-align: center;
-  }
-}
-
-@media (max-width: 479px) {
-  .caption {
-    word-break: break-all;
-  }
 }
 
 
