--- a/css/5_shopCart-bg.css
+++ b/css/5_shopCart-bg.css
@@ -3,16 +3,13 @@
     box-sizing: border-box;
 }
 
-html {
-    font-size: 16px;
-}
-
 body {
     font-family: "Noto Sans TC", sans-serif;
     font-family: "Roboto", sans-serif;
     height: 100vh;
     background-color: #168FA4;
     letter-spacing: 2px;
+    font-size: 16px;
 }
 
 button:focus {
@@ -59,7 +56,7 @@ button:focus {
 
 .progress-bar-section p {
     margin: 0;
-    font-size: 1rem;
+    font-size: .8rem;
 }
 
 .non-active {
@@ -73,7 +70,7 @@ button:focus {
 
 .img-wrap img {
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: contain;
 }
 
