--- a/css/1_member-login.css
+++ b/css/1_member-login.css
@@ -253,6 +253,11 @@ p {
   border: 3px solid #000;
   border-radius: 0;
 }
+.btn-primary:focus {
+  background-color: #1a90a5;
+  border-color: #000;
+  color: #fff;
+}
 
 .btn {
   background-color: #ffc639;
@@ -262,11 +267,6 @@ p {
   border-radius: 0px;
   font-weight: 600;
   height: 2.5rem;
-}
-
-.btn:focus {
-  box-shadow: none !important;
-  outline: none;
 }
 
 .btn:hover {
