--- a/css/5_shopCart-pay.css
+++ b/css/5_shopCart-pay.css
@@ -47,6 +47,8 @@ a:hover {
 /* 選擇付款方式卡片 */
 .payway-wrap {
     cursor: pointer;
+    outline: 1px solid #168FA4;
+    border-radius: 5px;
     transition: .5s;
 }
 
@@ -54,7 +56,7 @@ a:hover {
     cursor: pointer;
     outline: 1px solid #168FA4;
     border-radius: 5px;
-    box-shadow: 5px 5px #168FA4;
+    box-shadow: 7px 7px #168FA4;
 }
 
 .payway-wrap.active {
