--- a/css/0_index.css
+++ b/css/0_index.css
@@ -791,7 +791,6 @@ a:hover {
 .article-img {
   margin-top: 10%;
   height: 380px;
-  background-size: 100%;
   transition-duration: 0.5s;
   display: flex;
   align-items: center;
@@ -801,10 +800,19 @@ a:hover {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
+  transition-duration: 0.5s;
 }
 
-.article-img:hover {
-  background-size: 130%;
+.lighter-mask{
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.darker-mask{
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .cover-1 {
