--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -240,11 +240,11 @@ input[type="number"] {
   color: #ff0000;
 }
 
-.input-wrap.success input {
+.input-wrap.success textarea {
   border-color: #168fa4;
 }
 
-.input-wrap.error input {
+.input-wrap.error textarea {
   border-color: #ff0000;
 }
 
