--- a/css/4_product-detail.css
+++ b/css/4_product-detail.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 html,
 body {
@@ -174,6 +174,16 @@ body {
   margin: auto;
   padding: 20px;
   /* width: 900px; */
+}
+
+.new-name-bar {
+  display: none;
+}
+
+.name-bar-lest {
+  border-bottom: 3px solid black;
+  margin: auto;
+  padding: 20px;
 }
 
 .bar-circle {
@@ -353,6 +363,10 @@ input[name="tab_item"] {
   }
 
   .name-bar {
+    display: flex;
+  }
+
+  .name-bar-lest {
     display: flex;
   }
 
